@@ -10,6 +10,8 @@ ver 0.23.9 (not yet released)
 * fix bogus volume levels with multiple partitions
 * improve iconv detection
 * macOS: fix macOS 10 build problem (0.23.8 regression)
+* Android
+  - load mpd.conf from app data directory
 
 ver 0.23.8 (2022/07/09)
 * storage
